--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -1,7 +1,7 @@
 \section{Реализация}
 
 \subsubsection*{Анализатор:}
-В компании есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript. Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
+В компании есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript. Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью ANTLR переводится в Control Flow Graph (CFG)
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{images/engine.png}\hfill
@@ -17,7 +17,7 @@
     \item Структура автомата, функции для работы с ним
     \item Общие операции для решеток (join, meet, strictEquals, ...)
     \item Операции на строках (length, concat, substring, ...)
-    \item Оператор замыкания (widening)
+    \item Оператор расширения (widening)
 \end{itemize}
 На существующем бенчмарке из 85 реальных проектов:
 \begin{itemize}
@@ -29,20 +29,20 @@
 
 \newpage
 \subsection{Структура}
-Сама структура автомата базовая - есть вершины (states) и переходы между ними. Некоторые из стейтов помечены как начальные или как конечные. На переходах стоят строки или символ $\top$, обозначающий любую строку
+Структура автомата --- есть вершины (states) и переходы между ними. Некоторые из вершин помечены как начальные или как конечные. На переходах стоят строки или символ $\top$, обозначающий любую строку
 
 % \subsubsection*{Операции над множествами строк}
 \subsubsection*{union}
 Основной операцией является объединение автоматов. С её помощью находим наименьший язык, содержащий оба, порождаемых автоматами
 
-Реализаиця простая: создаем общее начальное состояние, проводим из него переходы с пустой строкой в начальные состояния двух объединяемых автоматов. Затем минимизируем полученный автомат (чуть ниже описана функция minimize)
+Реализаиця: создаем общее начальное состояние, проводим из него переходы с пустой строкой в начальные состояния двух объединяемых автоматов. Затем минимизируем полученный автомат (чуть ниже описана функция minimize)
 
 \subsubsection*{intersect}
 Еще одной важной операцией является пересечение автоматов. Она позволяет понять, есть ли в двух алфавитах общие слова. А также находить наибольший общий подъязык
 
 Реализуется она при помощи операций дополнения и объединения, то есть по формуле \[A \cap B = S / ((S / A) \cup (S / B))\]
 
-Дополнение строится таким образом - выписываем все возможные переходы в обоих автоматах, а затем для каждого переходы между двумя вершинами заменяются на дополнение к этим переходам
+Дополнение строится таким образом --- выписываем все возможные переходы в обоих автоматах, а затем для каждого переходы между двумя вершинами заменяются на дополнение к этим переходам
 
 \subsubsection*{subset}
 Проверка на то, что один язык полностью содержит другой. Реализуется с помощью дополнения и пересечения по формуле
@@ -57,13 +57,114 @@
 
 Последним шагом удаляем те вершины, из которых нельзя попасть в финальные. Таким образом получим упрощенную версию того же самого автомата
 
-TODO ПРИМЕР С КАРТИНКАМИ
+Рассмотрим пример минимизации такого автомата\\
+
+\begin{tikzpicture}[->, >=stealth', shorten >=1pt, auto, node distance=3cm, semithick]
+    % Основные состояния
+    \node[state, initial] (q0) {$q_0$};
+    \node[state, right of=q0] (q1) {$q_1$};
+    \node[state, right of=q1] (q2) {$q_2$};
+    \node[state, right of=q2, accepting] (q3) {$q_3$};
+    
+    % Параллельные состояния
+    \node[state, below of=q0, accepting] (p1) {$p_1$};
+    \node[state, right of=p1] (p2) {$p_2$};
+    \node[state, right of=p2] (p3) {$p_3$};
+    
+    % Основные переходы
+    \path (q0) edge node[above] {ab} (q1)
+          (q1) edge node[above] {ac} (q2)
+          (q2) edge node[above] {aba} (q3);
+    
+    % Параллельные переходы
+    \path (q0) edge node[left] {$\varepsilon$} (p1)
+          (p1) edge node[above] {ab} (p2)
+          (p2) edge node[above] {da} (p3)
+          (p3) edge node[right] {aba} (q3);
+\end{tikzpicture}
+
+Сначала происходит детерминация, при которой $q_0$ и $p_1$ склеиваются в одну, которая становится терминальной. Затем так как из полученной вершины 2 одинаковых ребра, то вершины, в которые они ведут, склеиваются. Получаем такой автомат\\
+
+\begin{tikzpicture}[->, >=stealth', shorten >=1pt, auto, node distance=3cm, semithick]
+    % Основные состояния
+    \node[state, initial, accepting] (q0) {$q_0$};
+    \node[state, right of=q0] (q1) {$q_1$};
+    \node[state, right of=q1] (q2) {$q_2$};
+    \node[state, right of=q2, accepting] (q3) {$q_3$};
+    
+    % Параллельные состояния
+    \node[state, right of=p2] (p3) {$p_3$};
+    
+    % Основные переходы
+    \path (q0) edge node[above] {ab} (q1)
+          (q1) edge node[above] {ac} (q2)
+          (q2) edge node[above] {aba} (q3);
+    
+    % Параллельные переходы
+    \path (q1) edge node[above] {da} (p3)
+          (p3) edge node[right] {aba} (q3);
+\end{tikzpicture}
+
+Следующий шаг reverse\\
+
+
+\begin{tikzpicture}[->, >=stealth', shorten >=1pt, auto, node distance=3cm, semithick]
+    % Основные состояния
+    \node[state, accepting] (q0) {$q_0$};
+    \node[state, left of=q0] (q1) {$q_1$};
+    \node[state, left of=q1] (q2) {$q_2$};
+    \node[state, initial, left of=q2, accepting] (q3) {$q_3$};
+    
+    % Параллельное состояние
+    \node[state, below of=q2] (p3) {$p_3$};
+    
+    % Основные переходы (развернутые)
+    \path (q1) edge node[above] {ab} (q0)
+          (q2) edge node[above] {ac} (q1)
+          (q3) edge node[above] {aba} (q2);
+    
+    % Параллельные переходы (развернутые)
+    \path (p3) edge node[below] {da} (q1)
+          (q3) edge node[left] {aba} (p3);
+\end{tikzpicture}
+
+Опять детерминируем, схлопывая $q_2$ и $p_3$\\
+
+\begin{tikzpicture}[->, >=stealth', shorten >=1pt, auto, node distance=3cm, semithick]
+    % Основные состояния
+    \node[state, accepting] (q0) {$q_0$};
+    \node[state, left of=q0] (q1) {$q_1$};
+    \node[state, left of=q1] (q2) {$q_2$};
+    \node[state, initial, left of=q2, accepting] (q3) {$q_3$};
+    
+    % Основные переходы (развернутые)
+    \path (q1) edge node[above] {ab} (q0)
+          (q2) edge[bend right] node[above] {ad} (q1)
+          (q2) edge[bend left] node[above] {ac} (q1)
+          (q3) edge node[above] {aba} (q2);
+\end{tikzpicture}
+
+Еще раз reverse, и получаем упрощенную версию автомата\\
+
+\begin{tikzpicture}[->, >=stealth', shorten >=1pt, auto, node distance=3cm, semithick]
+    % Основные состояния
+    \node[state, initial, accepting] (q0) {$q_0$};
+    \node[state, right of=q0] (q1) {$q_1$};
+    \node[state, right of=q1] (q2) {$q_2$};
+    \node[state, right of=q2, accepting] (q3) {$q_3$};
+    
+    % Основные переходы (развернутые)
+    \path (q0) edge node[above] {ab} (q1)
+          (q1) edge[bend right] node[below] {ad} (q2)
+          (q1) edge[bend left] node[above] {ac} (q2)
+          (q2) edge node[above] {aba} (q3);
+\end{tikzpicture}
 
 \subsubsection*{explode}
 Для реализации сложных операций на строках, такие как Replace и Substr, в которых нужно искать подстроки в автоматах, есть операция, которая переводит автомат к конечному автомату с переходами по буквам. Она просто заменяет каждое ребро на путь, где на каждом переходе лишь один символ вместо целого слова. Также есть обратная операция, которая схлопывает вершины с одним входящим и одним выходящим ребром в один переход
 
 \subsubsection*{getLanguage}
-Собираем все слова, порождаемые автоматом, с помощью прохода DFS. Если в графе есть цикл, то возможных слов бесконечно, и этот случай нужно отдельно разобрать. Эта операция полезна для оптимизаций в некоторых случаях (далее будет пример)
+Собираем все слова, порождаемые автоматом, с помощью прохода DFS. Если в графе есть цикл, то возможных слов бесконечно, и этот случай нужно отдельно разобрать, вернув $\top$. Эта операция полезна для оптимизаций, когда вместо выполнения громоздких операций над автоматом проще выписать все слова и по отдельности разобрать
 
 \newpage
 \subsection{Операции для решеток}
@@ -82,7 +183,7 @@ TODO ПРИМЕР С КАРТИНКАМИ
 \newpage
 \subsection{Операции на строках}
 \subsubsection*{Length}
-Возвращает интервал $[c_1, c_2]$, такой что $c_1 \leq |s| \leq c_2$. При этом если $s$ содержит в себе цикл, или же содержит в себе переход, на котором стоит $\top$, то есть любая строка, то максимальная длина будет сколь угодно большой. Минимальная при этом заменяет все топы на пустые строки
+Возвращает интервал $[c_1, c_2]$, такой что $c_1 \leq |s| \leq c_2$. При этом если $s$ содержит в себе цикл, или же содержит в себе переход, на котором стоит $\top$, то есть любая строка, то максимальная длина будет сколь угодно большой. Минимальная при этом заменяет все $\top$ на пустые строки
 $$
 \text{length}(s) \triangleq 
 \begin{cases}
@@ -100,7 +201,7 @@ $$
 
 \newpage
 \subsubsection*{Contains}
-Абстрактная семантика contains должна возвращать значение true, если любая строка из A' содержится в любой строке из A, значение false, если какая-то строка из A' не содержится в какой-то строке из A и \{true, false\} ($\top$) в остальных случаях
+Абстрактная семантика contains должна возвращать значение true, если любая строка из $A'$ содержится в любой строке из $A$, значение false, если какая-то строка из $A'$ не содержится в какой-то строке из $A$ и \{true, false\} ($\top$) в остальных случаях
 
 $$
 \text{contains}(s, s') \triangleq 
@@ -112,9 +213,9 @@ $$
 \end{cases}
 $$
 
-Для начала определим, в каком случае нужно возвращать false. Для этого определим фактор-автоматон FA(A), который принимает все подстроки A. Для этого нужно просто пометить все стейты конечными. Затем пересечь FA(A) и A', чтобы проверить, что никакая подстрока любой строки из A не является строкой из A'
+Для начала определим, в каком случае нужно возвращать false. Для этого определим фактор-автомат $FA(A)$, который принимает все подстроки $A$. Для этого нужно просто пометить все стейты конечными. Затем пересечь $FA(A)$ и $A'$, чтобы проверить, что никакая подстрока любой строки из $A$ не является строкой из $A'$
 
-Теперь, в каком случае true. Если A' содержит 2 слова, ни одно из которых не является префиксом другого, то они оба не могут быть одновременно префиксами какого-либо слова из A. Значит все слова в A' должны быть по цепочке включены друг в друга. Или же автомат для них выглядит как путь, некоторые вершины на котором конечные. И в этом случае достаточно проверить, что самое длинное слово входит во все слова из A, тогда и его префиксы будут
+Теперь, в каком случае true. Если $A'$ содержит 2 слова, ни одно из которых не является префиксом другого, то они оба не могут быть одновременно префиксами какого-либо слова из $A$. Значит все слова в $A'$ должны быть по цепочке включены друг в друга. Или же автомат для них выглядит как путь, некоторые вершины на котором конечные. И в этом случае достаточно проверить, что самое длинное слово входит во все слова из $A$, тогда и его префиксы будут
 
 Во всех остальных случаях точного ответа нет, поэтому возвращаем $\top$
 
@@ -143,18 +244,16 @@ $$
 В статье TARSIS описан алгоритм только для 6 операций, тогда как на деле их гораздо больше. Часть из них похожа на описанные сверху, какие-то понятно как реализовывать. Но есть и более сложные. Разберем некоторые из них
 
 \subsubsection*{startsWith, endWith}
-Идем из начальных (или конечных в случае endWith) вершин, ища те переходы, чтобы путь совпадал с паттерном. Если не находим такого пути, значит точно false. Если оказывается, что путь нужной длины только один, значит true. Иначе $\top$
+Идем из начальных (или конечных в случае endWith) вершин, ища те переходы, чтобы путь совпадал с паттерном. Если не находим такого пути, значит точно false. Если оказывается, что путь нужной длины только один, значит true. Иначе \{true, false\}
 
-\subsubsection*{charAt, slice, includes}
+\subsubsection*{charAt, slice}
 Эти функции похожи на substr, аналогично шагаем по путям на нужную длину. В случае с charAt проверяем, что все символы на нужном месте одинаковые и равны нужному (true), либо что ни один не равен (false), в остальных случаях $\top$. Для slice вырезаем нужную часть автомата аналогично substr
-
-Includes аналогична indexOf, только нужно возвращать не индекс, а true/false
 
 \subsubsection*{trim, toUpperCase, pad, match}
 Первые 2 функции легко реализуются, нужно просто проделать операцию для каждого перехода. А вот pad и match сходу непонятно, как реализовывать для автоматов. Одной из проблем является например $\top$ ребро, которое не дает определить длину слова и непонятно, сколько символов вставлять в начало. И один из несложных вариантов реализации это выписать весь язык, порождаемый автоматом, для каждого слова по отдельности проделать операцию и склеить в один автомат. Такой подход все также плохо будет работать с циклами, то есть для цикличных автоматов возвращаем $\top$
 
 \subsubsection*{toNum, toBool}
-toBool проверяет то, есть ли в языке пустая строка или "0". Если нет, то true. Если язык состоит только из пустой строки или "0", то false, иначе $\top$
+Это функции преобразования строки в число или логическое выражение. toBool проверяет то, есть ли в языке пустая строка или "0". Если нет, то true. Если язык состоит только из пустой строки или "0", то false, иначе \{true, false\}
 
 toNum должен вернуть в результате интервальную решетку для чисел, то есть ограничение сверху и снизу на значение. И заодно проверить, что все строки состоят из корректных символов, то есть цифр, не более одной точки или запятой и возможно минус в начале. Также перебираем всевозможные пути, проверяем на корректность. Запоминаем минимальное и максимальное значение
 
@@ -336,10 +435,60 @@ console.log(x.substr(0, 1))    // [string: a tags=[XSS,WEB]]
 \subsubsection*{SceneBoard}
 Самый большой проект в пуле тестовых. Размер 250к строк. Время анализа составило 506к ms (8 минут 26 секунд) на старой решетке и 526к ms (8:46) на новой, то есть прирост 4\%. Потребление памяти было 17935 МБ на старой и 16706 МБ на новой, то есть уменьшилось на 7\%. Снижение обусловлено тем, что благодаря повышению точности было проигнорировано больше строчек кода, так как он мертвый, то есть никогда не запускается в реальности. Замеры точности можно увидеть в табличке снизу
 
-TODO табличка
+\begin{table}[h]
+\centering
+\caption{Сравнение результатов анализа}
+\begin{tabular}{lrrr}
+\toprule
+\multirow{2}{*}{Метрика} & \multicolumn{2}{c}{Количество возвратов} & \multirow{2}{*}{Отношение} \\
+\cmidrule(lr){2-3}
+ & \texttt{old} & \texttt{new} & (new/old) \\
+\midrule
+Всего состояний & 10,539,656 & 10,093,468 & 0.96 \\
+\addlinespace
+Concat: Top & 100,419 & 10,503 & 0.10 \\
+Concat: Const & 12,849 & 12,913 & 1.01 \\
+% Concat: Regex & 0 & 86,537 & $\infty$ \\
+\addlinespace
+Substr: Top & 233 & 193 & 0.83 \\
+Substr: Const & 20 & 41 & 2.05 \\
+% Substr: Regex & 0 & 5 & $\infty$ \\
+\addlinespace
+Str: Top & 197 & 186 & 0.94 \\
+Str: Const & 80 & 87 & 1.08 \\
+% Str: Regex & 44 & 28 & 0.64 \\
+\addlinespace
+Number: Top & 221 & 163 & 0.74 \\
+Number: NonTop & 52 & 98 & 1.88 \\
+\addlinespace
+Boolean: Top & 3,716 & 3,412 & 0.92 \\
+Boolean: NonTop & 5 & 10 & 2.00 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
 
 \subsubsection*{Notepad}
 
 \subsubsection*{AppGalery}
 
 \subsubsection*{Open Source}
+
+
+
+% absval
+% Total evaluated states: 10539656
+% Concat returns: Top 100419 const 12849 regex 0
+% Substr returns: Top 233 const 20 regex 0
+% Str returns: Top 197 const 80 regex 44
+% Number returns: Top 221 nonTop 52
+% Boolean returns: Top 3716 nonTop 5
+
+% regex
+% Total evaluated states: 10093468
+% Concat returns: Top 10503 const 12913 regex 86537
+% Substr returns: Top 193 const 41 regex 5
+% Str returns: Top 186 const 98 regex 28
+% Number returns: Top 163 nonTop 98
+% Boolean returns: Top 3412 nonTop 10
