--- a/thesis/items/theory/static_analyzis.tex
+++ b/thesis/items/theory/static_analyzis.tex
@@ -46,6 +46,7 @@
 \begin{itemize}
 \item Страдает от проблемы комбинаторного взрыва, так как количество путей выполнения растёт экспоненциально \cite{PathExplosion}
 \item Требует сложных SMT Solver-ов для обработки выражений (Z3~\cite{Z3}, CVC5~\cite{CVC5} и др.)
+\item Нет гарантии овераппроксимации, солвер не может доказать, что решения нет
 \end{itemize}
 
 
