--- a/thesis/items/theory/string.tex
+++ b/thesis/items/theory/string.tex
@@ -28,33 +28,39 @@ if (s.length == 0) {
 let repeats = 100 / str.length;
 \end{lstlisting}
 
-В статьях чаще всего упоминаются ещё 3 строковых решетки
+В статьях чаще всего упоминаются ещё 4 строковых решетки
+
+\subsubsection*{The String Set}
+Домен множества строк ($SS_k$) сохраняет не более $k$ константных строк. В случае переполнения сбрасывается в $\top$. Этот домен заметно более затратен по времени и памяти. Достаточно просто рассмотреть функцию конкатенации двух абстрактных значений, при которой количество элементов будет произведением. А конкатенация самая часто использующаяся функция на строках, потому от её оптимизации будет многое зависеть
+
+Точность этой решетки очень высокая, так как каждую операцию можно отдельно проделать с каждой строкой в множестве. Но из-за этого и производительность сильно проседает. Плюс теряется вся точность для бесконечного набора возможных строк, который может возникнуть например в цикле при конкатенации
 
 \subsubsection*{The Abstract Length string domain}
-Домен длины абстрактной строки (LS) запоминает минимальную и максимальную длину строк, которые может принимать абстрактное значение. Например
+Домен длины абстрактной строки ($LS$) запоминает минимальную и максимальную длину строк, которые может принимать абстрактное значение. Например
 $$LS("foo"; "bark") = [3, 4] $$
 Для примера выше она отлично подойдет, так как запомнит, что минимальная длина 3, а максимальная 4, и даже сможет верно вернуть значение для repeats, то есть интервал [25, 34]. Однако для других операций, таких как substr или charAt, она не годится
 
 \subsubsection*{The Character Inclusion domain}
-Домен включения символов (CI) отслеживает символы, встречающиеся в строке. Каждая абстрактная строка имеет вид [L, U]. Нижняя граница L содержит символы, которые должны встречаться в конкретной строке (строках), в то время как верхняя граница U представляет символы, которые могут появиться
+Домен включения символов ($CI$) отслеживает символы, встречающиеся в строке. Каждая абстрактная строка имеет вид [L, U]. Нижняя граница L содержит символы, которые должны встречаться в конкретной строке (строках), в то время как верхняя граница U представляет символы, которые могут появиться
 
 Этот домен полностью игнорирует структуру конкретных строк, которые аппроксимирует. То есть например 
 
 $$CI("foo") = CI("of") = [\{'f', 'o'\}, \{'f', 'o'\}]$$
 
-Но CI, как правило, дешев в вычислительном отношении и иногда предоставляет очень полезную информацию
+Но $CI$, как правило, дешев в вычислительном отношении и иногда предоставляет полезную информацию. Например функция contains, для которой можно вернуть true в случае проверки на включение одной буквы, которая содержится в нижней границе, или же false, если слово содержит букву, которой нет в верхней
 
 \subsubsection*{The Prefix-Suffix domain}
-Элементами префикс-суффикс домена (PS) являются пары $[p, s]$, содержащие в себе все строки, которые начинаются с p и заканчиваются на s
+Элементами префикс-суффикс домена ($PS$) являются пары $[p, s]$, содержащие в себе все строки, которые начинаются с p и заканчиваются на s
 
 \[PS("abacab"; "abab") = ["aba"; "ab"]\]
 
-
+Также как и $CI$, $PS$ не может хранить конкретные строки. Но есть ряд функций, такие как startsWith, endsWith, а иногда и substr, indexOf, для которых будет возвращаться точный ответ в удачных случаях\\
 
 \newpage
-\subsection{Уточнение анализа с помощью конечных автоматов}
+\subsection{Конечные автоматы}
+Все перечисленные сверху решетки хороши каждая для своего ограниченного набора функций. Но в общем случае будет много неточностей. Поэтому стоит рассмотреть другие подходы, обладающие большей точностью, хоть и более сложные
 
-Для повышения точности анализа был предложен подход, основанный на \textbf{конечных автоматах с переходами по буквам}, описанный в работе~\cite{apinis2020symbolic}. В этом подходе множество возможных значений строк моделируется как язык, распознаваемый конечным автоматом. Операции над строками соответствуют операциям над языками: объединение, пересечение, конкатенация и пр.
+Для повышения точности анализа был предложен подход, основанный на \textbf{конечных автоматах с переходами по буквам}~\cite{apinis2020symbolic}. В этом подходе множество возможных значений строк моделируется как язык, распознаваемый конечным автоматом. Операции над строками соответствуют операциям над языками: объединение, пересечение, конкатенация и пр.
 
 \subsubsection*{Преимущества}
 \begin{itemize}
@@ -95,7 +101,7 @@ $$CI("foo") = CI("of") = [\{'f', 'o'\}, \{'f', 'o'\}]$$
 \label{fig:automaton}
 \end{figure}
 
-Овер-аппроксимация строк в конечных автоматах повышает точность анализа строк во многих сценариях, но она не подходит для реальных программ, работающих со статически неизвестными входными данными и манипуляциями с длинным текстом
+Овераппроксимация строк в конечных автоматах повышает точность анализа строк во многих сценариях, но она не подходит для реальных программ, работающих со статически неизвестными входными данными и манипуляциями с длинным текстом
 
 
 
@@ -108,26 +114,26 @@ TARSIS (Template-based Abstract Representation of Strings with Static analysis) 
 \subsubsection*{Основные функции}
 В статье описан алгоритм для аппроксимации с доказательством полноты наиболее часто использующихся функций на строках, а именно length, concat, substr, replace, contains и indexOf
 
-$$\left[ \text{length}(s) \right]_{m} = |\sigma|$$
-$$\left[ \text{concat}(s, s') \right]_{m} = \sigma \cdot \sigma'$$
-$$\left[ \text{substr}(s, a, a') \right]_{m} = \sigma_i \dots \sigma_j \quad \text{if} \quad i \leq j < |\sigma|$$
+$$\left[ \text{length}(s) \right] = |\sigma|$$
+$$\left[ \text{concat}(s, s') \right] = \sigma \cdot \sigma'$$
+$$\left[ \text{substr}(s, a, a') \right] = \sigma_i \dots \sigma_j \quad \text{if} \quad i \leq j < |\sigma|$$
 
 
 \[
-\left[ \text{replace}(s, s', s'') \right]_{m} = 
+\left[ \text{replace}(s, s', s'') \right] = 
 \begin{cases}
 \sigma \left[ s' / s'' \right] & \text{if } \sigma'  \curvearrowright_s \sigma \\
 \sigma & \text{otherwise}
 \end{cases}
 \]
 
-$$\left[ \text{contains}(s, s') \right]_{m} = 
+$$\left[ \text{contains}(s, s') \right] = 
 \begin{cases}
 \text{true} & \text{if } \exists i, j \in \mathbb{N}. \sigma_i \dots \sigma_j = s' \\
 \text{false} & \text{otherwise}
 \end{cases}$$
 
-$$\left[ \text{indexOf}(s, s') \right]_{m} = 
+$$\left[ \text{indexOf}(s, s') \right] = 
 \begin{cases}
 \min \left\{ i \mid \sigma_i \dots \sigma_j = s' \right\} & \text{if } \exists i, j \in \mathbb{N}. \sigma_i \dots \sigma_j = s' \\
 -1 & \text{otherwise}
