--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -37,8 +37,10 @@
 \usepackage{enumitem}
 \usepackage{array} % Для таблиц
 \usepackage{booktabs} % Для улучшенных таблиц
+\usepackage{multirow}
 
 \usepackage{amsmath}
+\usepackage{qtree}
 
 % Настройка стиля примера кода
 \newtcolorbox{codebox}{
